# stock-backtesting-tool

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  makefile  pylintrc  pyproject.toml  requirements.txt
app/: calculate.py  main.py  test.py
app/clients/: StockClient.py
app/models/: Stock.py
app/strategies/: AvgComparedToXDayAvgStrategy.py  SmaCross.py  VolumeDiff.py
app/templates/: base.html  stocks.html
app/utils/: TradingCalendarUtils.py
