[tool.poetry]
name = "stock-backtesting-tool"
version = "0.1.0"
description = ""
authors = ["Connor Young <connoryoungkicker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
pydantic = "^2.6.0"
uvicorn = "^0.27.0"
backtrader = "^1.9.78.123"
requests = "^2.31.0"
yfinance = "^0.2.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
