[tool.poetry]
name = "stock-backtesting-tool"
version = "0.1.0"
description = ""
authors = ["Connor Young <connoryoungkicker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
pydantic = "^2.6.0"
uvicorn = "^0.27.0"
requests = "^2.31.0"
yfinance = "^0.2.36"
backtesting = "^0.3.3"
pandas-datareader = "^0.10.0"
pendulum = "^3.0.0"
requests-cache = "^1.1.1"

[tool.poetry.scripts]
my-script = "my_module:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
